--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "fis3 server start --www ./public --port 8082 --no-daemon",
     "server": "fis3 server start --www ./public --port 8082 --no-daemon",
     "dev": "fis3 release -cwd ./public",
+    "build": "fis3 release -d ./dist",
     "gh-pages": "rm -rf gh-pages && fis3 release gh-pages -c",
     "prettier": "prettier --write '{component,scss,editor,renderer,route,store}/**/**/*.{js,jsx,ts,tsx,scss,json}'"
   },
@@ -29,22 +30,29 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "amis": "2.0.2",
     "amis-core": "2.0.2",
-    "amis-ui": "2.0.2",
     "amis-editor": "5.1.9",
+    "amis-ui": "2.0.2",
+    "amis-widget": "^1.3.8",
     "axios": "0.21.1",
     "bootstrap": "3.4.1",
     "copy-to-clipboard": "^3.2.0",
+    "fis3-hook-relative": "^2.0.3",
+    "js-cookie": "^2.2.0",
+    "konva": "^8.3.14",
     "mobx": "^4.5.0",
     "mobx-react": "^6.1.4",
     "mobx-state-tree": "^3.17.3",
+    "peaks.js": "^2.1.0",
     "qs": "6.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
-    "amis-widget": "^1.3.8"
+    "waveform-data": "^4.3.0",
+    "rc-input-number": "~7.3.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.8",
     "@types/qs": "^6.5.3",
